--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div id="rooms">
         Room:
         <select id="rooms"></select>
-        <button>Add Room</button>
+        <button id="roomButton">Add Room</button>
+        <button id="refreshButton">Refresh</button>
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
